--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,19 @@
         </div>
       </section>
     </main>
+    <style>
+      /* Default styles for small screens */
+      .element {
+        width: 100% !important;
+      }
 
+      /* Media query for large screens */
+      @media (min-width: 768px) {
+        .element {
+          width: 25% !important;
+        }
+      }
+    </style>
     <div id="shopify-section-footer" class="shopify-section shopify-section--footer">
       <footer id="section-footer" data-section-id="footer" data-section-type="footer" class="Footer  "
         role="contentinfo">
@@ -2118,6 +2130,9 @@
                 <p>We look forward to your presence at this glamorous event. Let's make it a memorable experience together! </p>
               </div>
               <br>
+              
+            </div>
+            <div class="Footer__Block Footer__Block--links element">
               <h2 class="Footer__Title Heading u-h6">About the shop</h2>
               <div class="Footer__Content Rte">
                 <p>Nikita Mhaisalkar is the creative force behind the luxe couture label “Nikita Mhaisalkar” that was
@@ -2125,27 +2140,6 @@
                   MBA in Entrepreneurship. With the rising demand of her premium clientele, she started her formal
                   training for an advanced degree in fashion design, alongside heading her unit. </p>
               </div>
-            </div>
-            <div class="Footer__Block Footer__Block--links">
-              <h2 class="Footer__Title Heading u-h6">QUICK LINKS</h2>
-
-              <ul class="Linklist">
-                <li class="Linklist__Item">
-                  <a href="//pages/faqs" class="Link Link--primary">FAQs</a>
-                </li>
-                <li class="Linklist__Item">
-                  <a href="//pages/terms-conditions" class="Link Link--primary">TERMS &amp;
-                    CONDITIONS</a>
-                </li>
-                <li class="Linklist__Item">
-                  <a href="//pages/privacy-policy" class="Link Link--primary">PRIVACY
-                    POLICY</a>
-                </li>
-                <li class="Linklist__Item">
-                  <a href="//pages/refund-policy" class="Link Link--primary">REFUND
-                    POLICY</a>
-                </li>
-              </ul>
             </div>
             <div class="Footer__Block Footer__Block--text">
               <h2 class="Footer__Title Heading u-h6">CONTACT US</h2>
