--- a/index.html
+++ b/index.html
@@ -2203,7 +2203,7 @@
               </ul>
             </div>
           </div>
-          <div class="Footer__Aside">
+          <div class="Footer__Aside s">
             <div class="klaviyo-form-SFkFVE"></div>
 
             <div class="Footer__Copyright">
