--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insert Data Example</title>
+  <title>Types of lenses every photographer must have?</title>
    <!-- Open Graph Tags -->
   <meta property="og:title" content="Types of lenses every photographer must have?" />
   <meta property="og:description" content="For a professional photographer, having different types of lenses that can serve different purposes is a must." />
