--- a/two.html
+++ b/two.html
@@ -7,7 +7,7 @@
    <!-- Open Graph Tags -->
   <meta property="og:title" content="Make $1000/Month with Photography from Home" />
   <meta property="og:description" content="Turn your passion for photography into income by freelancing from the comfort of your home. Work with clients worldwide, sell your photos online, and build a steady monthly income without stepping outside." />
-  <meta property="og:image" content="https://i.ibb.co/zc2yvjb/Black-Minimalist-Photography-Tips-Youtube-Thumbnail-1.png" />
+  <meta property="og:image" content="https://images2.imgbox.com/ff/52/6xslxwxN_o.png" />
   <meta property="og:url" content="https://www.upwork.com/freelance-jobs/photography/" />
   <meta property="og:type" content="website" />
 </head>
